--- a/app/assets/stylesheets/shared/bars.css.scss
+++ b/app/assets/stylesheets/shared/bars.css.scss
@@ -61,7 +61,7 @@
 	background: linear-gradient(to bottom,  #e0ebf6 0%,#f2f7fb 54%,#f2f5f6 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e0ebf6', endColorstr='#f2f5f6',GradientType=0 ); /* IE6-9 */
 
-	.subtle-back {
+	.background-logo {
 		position: fixed;
 		top: 150px;
 		width: 250px;
