--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,14 +1,28 @@
-<%= form_for Comment.new, :remote => true do |f| %>
-<div class="styled-form">
-	<%= f.text_area :comment, :cols => 80, :rows => 4 %>
-	<%= f.hidden_field :commentable_id, :value => commentable.id %>
-	<%= f.hidden_field :commentable_type, :value => commentable.class.to_s %>
-	<div id="comment_comment_count" class="field-counter to-left"></div>
-	<div class="actions to-right">
-		<%= link_to t('comments.actions.cancel'), 'javascript:void(0);', :class => 'clearer' %>
-		<%= f.submit t('comments.actions.comment') %>
+<div class="row-fluid top-spaced">
+	<div class="span2"></div>
+	<div class="span8">
+		<%= form_for Comment.new, :remote => true, :class => "form-horizontal" do |f| %>
+			<div class="control-group">
+				<div class="controls">
+					<%= f.text_area :comment, :rows => 5, :class => "span12" %>
+				</div>
+				<%= f.hidden_field :commentable_id, :value => commentable.id %>
+				<%= f.hidden_field :commentable_type, :value => commentable.class.to_s %>
+			</div>
+			<div class="control-group">
+				<div class="span12">
+					<div id="comment_comment_count" class="field-counter pull-left"></div>
+				</div>
+			</div>
+			<div class="control-group">
+				<div class="span12">
+					<div class="pull-right">
+						<%= link_to t('comments.actions.cancel'), 'javascript:void(0);' %>
+						<%= f.submit t('comments.actions.comment'), :class => 'btn btn-success' %>
+					</div>
+				</div>
+			</div>
+		<% end %>
 	</div>
-
-	<div style="clear: both;"></div>
+	<div class="span2"></div>
 </div>
-<% end %>
