--- a/app/views/pictures/_management_panel.html.erb
+++ b/app/views/pictures/_management_panel.html.erb
@@ -1,4 +1,4 @@
-<div id="picture-manager-modal" class="reveal-modal modalview-bar-relative-centered">
+<div id="picture-manager-modal" class="reveal-modal">
 	<a class="close-reveal-modal">&#215;</a>
 	<h2><%= t("pictures.manager.title") %></h2>
 	<div id="menu"></div>
