--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 /*
  *= require_self
+ *= require bootstrap_and_overrides
  *= require shared/main.css
  *= require shared/form.css
  *= require shared/bars.css
@@ -15,382 +16,3 @@
  *= require pictures.css
 */
 
-#container {
-	width: 80% !important;
-	margin-top: 10px;
-	position: relative;
-	
-	h1.empty {
-		margin-top: 25%;
-		color: #444444;
-		text-shadow: 0px 2px 2px #666;
-	}
-	
-	p.empty {
-		a {
-			font-size: 30px;
-			color: #308A2A;
-			font-weight: bold;
-			text-shadow: 0px 1px 1px #3D3D3D;
-		}
-	}
-	
-	p.empty, h1.empty {
-		text-align: center;
-	}
-}
-
-.bike {
-	padding: 14px;
-	border: 1px solid #E3E3E3;
-	background-color: #F4F4F4;
-  width: 250px;
-	margin-right: 0px !important;
-  margin: 10px;
-  float: left;
-	border: 1px solid #BABABA;
-	font-size: 12px;
-	
-	.brand {
-		padding: 0px;
-		margin-top: 0px;
-		
-		text-transform: uppercase;
-		font-size: 11px;
-		color: #404040;
-	}
-	
-	ul.social-status {
-		margin: 0px;
-		
-		li { 
-			margin: 0px 5px 0px 0px !important;
-			text-transform: uppercase;
-			font-size: 10px;
-			padding: 0px !important;
-			
-			a {
-				font-weight: 500 !important;
-			}
-		}
-	}
-	
-	.status {
-		height: 20px;	
-		p {
-			a:hover {
-				text-decoration: underline;
-			}
-			a {
-				color: black;
-			}
-			
-			padding-top: 10px !important;
-			font-size: 12px;
-			display: inline-block;
-			margin: 0px;
-
-			.count {
-				padding: 2px;
-				font-weight: bold;
-			}
-		}
-	}
-	
-	h2 {
-		a {
-			color: #2B2B2B
-		}
-		margin: 0px;
-	}
-	
-	.owner {
-		margin-top: -5px;
-		padding-bottom: 5px;
-		text-align: right;
-		font-size: 11px;
-	}
-}
-
-.bike-details, .bike-statuses, .bike-comments, .bike-description, .bike-photos {
-	.edit:hover {
-		background-color: #40A23E;
-		
-		a {
-			text-decoration: none !important;
-		}
-	}
-	
-	.edit {
-		margin: 0px;
-		font-size: 11px;
-		font-style: normal; 
-		background-color: #80B677;
-		display: inline-block;
-		padding: 2px 5px;
-		vertical-align: 5px;
-		
-		a {
-			font-weight: bold;
-			color: white !important;
-		}
-	}
-}
-
-.bike-details, .bike-statuses, .bike-comments, .bike-description {
-	width: 680px;
-	padding: 20px;
-	padding-bottom: 10px;
-	background-color: white;
-}
-
-.bike-description {
-	background-color: #1A1A1A;
-	padding-bottom: 20px;
-	color: white;
-	font-size: 13px;
-	
-	.main {
-		text-align: center;
-		display: inline-block;
-		width: 76%;
-	}
-	
-	.status {
-		width: auto;
-		font-size: 14px;
-		background-color: #131313;
-		padding: 5px 15px 5px 10px;
-		display: inline-block;
-		
-		p {
-			padding: 0px;
-			margin: 0px;
-		}
-		
-		p.likes {
-			color: #FFA6A3;
-			.count {
-				padding-right: 5px;
-			}
-		}
-		
-		.heart {
-			margin-right: 10px;
-		}
-		
-		* {
-			display: inline-block !important;
-		}
-	}
-}
-
-.bike-comments {
-	background-color: #E7E7E7;
-	
-	h2 {
-		text-align: center;
-	}
-	
-	.actions {
-		margin: -15px 80px 0 0;		
-	}
-	
-	.field-counter {
-		margin-left: 70px;
-	}
-	
-	#comments-listing {
-		.comment {
-			font-size: 14px;
-			margin-left: 100px;
-			width: 620px;
-			padding: 10px 20px;
-			border-bottom: 1px solid #CFCFCF;
-			
-			.user {
-				font-style: italic;
-				color: #327E29;
-			}
-			
-			.datetime {
-				font-size: 12px;
-			}
-			
-			.delete:hover {
-				text-decoration: underline;
-			}
-			
-			.delete {
-				font-weight: bold;
-				color: black;
-				font-size: 13px;
-			}
-		}
-	}
-}
-
-.photo img {
-	border: 1px solid #8C8C8C;
-}
-
-.bike-photos {
-	width: 720px;
-	height: 370px;
-	background-color: #5D5D5D;
-	
-	.info {
-		display: none;
-		position: fixed;
-		margin-top: -200px;
-		margin-left: 160px;
-		width: 400px;
-		text-align: center;
-		background-color: rgba(255,255,255, 0.7);
-		color: #3E3E3E;
-		font-weight: bold;
-		font-size: 13px;
-		border: 1px solid white;
-		text-align: center;
-		
-		p {
-			margin-right: 10px;
-			display: inline-block;
-			a {
-				margin-left: 14px;
-			}
-		}
-		
-		.weight {
-			color: #4C4C4C;
-			font-weight: bold;
-			padding-left: 10px;
-			border-left: 1px solid #FFFFFF;
-		}
-		
-		.brand {
-			text-transform: uppercase;
-		}
-		
-		a {
-			margin-left: 10px;
-			color: #4A8237;
-		}
-	}
-}
-
-.bike-details {
-	padding-top: 10px;
-	
-	a:hover {
-		text-decoration: underline !important;
-	}
-	
-	a.back {
-		text-align: left;
-	}
-	
-	h1 {
-		text-align: right;
-		color: #2A2A2A;
-		margin-bottom: 5px;
-		margin-top: 0px;
-	}
-	
-	.owner {
-		text-align: right;
-	}
-}
-
-.bike-statuses {
-	
-	h2 {
-		padding: 0px;
-		margin: -10px 0px 10px 0px;
-	}
-	
-	.item {
-		padding: 10px;
-		padding-right: 0px;
-		font-size: 11px;
-		display: inline-block;
-		margin-right: 5px;
-		
-		.content {
-			margin-top: 10px;
-		}
-		
-		.concept {
-			background-color: #A9A9A9;
-			color: white;
-			font-weight: bold;
-			padding: 2px 8px;
-			margin-right: 15px;
-			margin-left: 0px !important;
-		}
-		
-		* { margin-right: 10px; }
-	}
-	
-	.statuses {
-		text-align: center;
-		margin-bottom: 13px;
-		
-		.on {
-			border: 2px solid #5BA347 !important;
-			
-			.concept {
-				background-color: #5BA347;
-			}
-		}
-		
-		.item {
-			border: 2px solid #DDDDDD;
-			text-align: center;
-		}
-		
-	}
-}
-
-.status {
-	div { display: inline-block }
-	p {
-		vertical-align: 6px;
-	}
-
-	p.likes {
-		color: #B44E5D;
-		font-weight: bold;
-	}
-
-	div.heart {
-		margin-left: 5px;
-		margin-top: 5px;
-		height: 20px;
-		width: 25px;
-		cursor: pointer !important;
-	}
-	
-	div.weak, div.strong:hover {
-		background: url('/assets/heart_des.png');
-	}
-	
-	div.strong, div.weak:hover {
-		background: url('/assets/heart_sel.png');
-	}
-	
-	.tooltip {
-		display: none !important;
-	}
-}
-
-.owner a {
-	color: #515151;
-	font-weight: bold;
-}
-
-.owner {
-	font-style: italic;
-	font-size: 14px;
-	color: #858585;
-}
