--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -1,3 +1,11 @@
+.navbar {
+	
+}
+
+body, html {
+	font-family: "gothamrndbook-Book";
+}
+
 @font-face{
 font-family: "gothamrndbook-Book";
    font-style: normal;
@@ -9,6 +17,24 @@ font-family: "gothamrndbold-Bold";
    font-style: normal;
    font-weight: normal;
    src:url("/assets/gothamrndbold.ttf");
+}
+
+.background-logo {
+	pointer-events:none;
+	position: fixed;
+	top: 150px;
+	width: 250px;
+	height: 583px;
+	left: 0px;
+	background: url('/assets/menu_logo.png');
+}
+
+.top-spaced {
+	margin-top: 30px;
+}
+
+.top-spaced-70 {
+	margin-top: 70px;
 }
 
 .hidden {
@@ -26,14 +52,6 @@ font-family: "gothamrndbold-Bold";
 
 .centered-text {
 	text-align: center;
-}
-
-html, body {width: 100%; height: 100%; overflow: hidden }
-body {
-	background: url('/assets/crosses.png');
-	margin: 0px;
-	font-family: 'Open Sans', 'Helvetica Neue', 'Trebuchet MS';
-	background-color: #D5D5D5
 }
 
 a.personal {
@@ -94,9 +112,6 @@ a.personal {
 
 a {
 	text-decoration: none;
-}
-a:visited {
-	color: grey;
 }
 
 a.back:hover {
@@ -328,10 +343,6 @@ ul li, ul li * { display: inline-block }
 .simplePagerContainer ul li.currentPage a{color:#999999;cursor:default;}
 .simplePagerContainer ul li:first-child a{border-left-width:1px;-webkit-border-radius:3px 0 0 3px;-moz-border-radius:3px 0 0 3px;border-radius:3px 0 0 3px;}
 .simplePagerContainer ul li:last-child a{-webkit-border-radius:0 3px 3px 0;-moz-border-radius:0 3px 3px 0;border-radius:0 3px 3px 0;}
-
-.modalview-bar-relative-centered {
-	margin-left: -150px !important;
-}
 
 p.empty {
 	margin-top: 10%;
