--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="mid-sheet">
 	<div class="styled-form shadow-light">
-		<%= link_to t('actions.back'), bike_path(@bike), :class => 'back' %>
+		<%= link_to t('actions.back_arrow').html_safe, bike_path(@bike), :class => 'back' %>
 		<h1><%= t('bikes.views.edit.title') %></h1>
 		<%= form_for @bike, :method => :put, :html => {:multipart => true, :class => 'bike-upload edit-bike'} do |f| %>
 			<%= render :partial => 'form', :locals => {:f => f, :note => t('bikes.views.edit.change_photo') } %>
