--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,18 +1,34 @@
-<% content_for :main_bar do %>
-	<h1><%= t('app.name') %></h1>
-<% end %>
+<div class="container-fluid">
+	<div class="row-fluid top-spaced">
+		<div class="span1"></div>
+		<div class="span10">
+			<div class="pull-right span5">
+				<div class="btn-group">
+	    		<button class="btn">Populares</button>
+	    		<button class="btn">Extraviadas</button>
+	    		<button class="btn">En venta</button>
+					<button class="btn">En renta</button>
+	    	</div>
+				<a href="<%= new_bike_path %>" class="btn btn-inverse pull-right" type="button"><i class="icon-plus icon-white"></i> Registrar mi bici</a>
+				
+			</div>
+		</div>
+		<div class="span1"></div>
+	</div>
+	<div class="row-fluid top-spaced">
+		<div class="span1"></div>
+		<div class="span10 masonry">
+			<% if @bikes.empty? %>
 
-<div id="container" class="masonry">
-	<% if @bikes.empty? %>
-		
-		<h1 class="empty"><%= t('bikes.views.index.empty.message') %></h1>
-		<p class="empty"><%= link_to t('bikes.views.index.empty.invite'), new_bike_path %></p>
-		
-	<% else %>
-		<% @bikes.each do |bike| %>
-			<%= render bike %>
-		<% end %>
-	<% end %>
+				<h1 class="empty"><%= t('bikes.views.index.empty.message') %></h1>
+				<p class="empty"><%= link_to t('bikes.views.index.empty.invite'), new_bike_path %></p>
+
+			<% else %>
+				<% @bikes.each do |bike| %>
+					<%= render bike %>
+				<% end %>
+			<% end %>
+		</div>
+		<div class="span1"></div>
+	</div>
 </div>
-
-
