--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,17 +1,29 @@
 <div id="section-bikes">
 	<div id="<%= @bike.id %>">
 		<div class="bike-details shadow-light centered">
-			<%= link_to t('actions.back_arrow').html_safe, bikes_path, :class => 'back' %>
-			<div class="to-right">
-				<h1 class="inlined"><%= @bike.name %></h1>
-				<% if current_user_owns_bike?(@bike) %>
-					<p class="edit rounded-10"><%= link_to t('bikes.views.show.modify'), edit_bike_path(@bike) %></p>
-				<% end %>
+			<div class="row-fluid">
+				<div class="pull-right">
+					<h1 class="inlined"><%= @bike.name %></h1>
+				</div>
+				<div class="pull-left">
+					<ul class="nav nav-pills">
+			    	<li><%= link_to t('actions.back_arrow').html_safe, bikes_path, :class => 'back' %></li>
+						<% if current_user_owns_bike?(@bike) %>
+							<li class="active"><%= link_to t('bikes.views.show.modify'), edit_bike_path(@bike) %></li>
+						<% end %>
+			    </ul>
+					
+				</div>
 			</div>
-			<div class="clear"></div>
-			<div class="owner">
-				<%= t('bikes.views.show.owned_by') %><%= contact_for(@bike) %>
-			</div>
+			
+				<div class="row-fluid">
+					<div class="pull-right">
+						<span class="owner">
+							<%= t('bikes.views.show.owned_by') %><%= contact_for(@bike) %>
+						</span>
+					</div>
+				</div>
+			
 		</div>
 
 		<div class="bike-photos imageable-photos shadow-light centered">
@@ -23,8 +35,10 @@
 			<p class="main">
 				<%= @bike.description %>
 			</p>
-			<div class="status rounded-10">
-				<%= render :partial => 'bikes/likes_count', :locals => {:bike => @bike } %>
+			<div class="row-fluid">
+				<div class="status rounded-10 pull-right">
+					<%= render :partial => 'bikes/likes_count', :locals => {:bike => @bike } %>
+				</div>
 			</div>
 		</div>
 	
