--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -5,28 +5,18 @@
 	
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "map" %>
+  <%= stylesheet_link_tag    "maps" %>
+  <%= javascript_include_tag "application" %>
 	<%= yield :javascripts %>
   <%= csrf_meta_tags %>
 </head>
 
 <body>
-	<script type="text/javascript">
-	    //$(function() {
-	    //    Wikicleta.setCurrentUser(<%= current_user.to_json.html_safe if !current_user.nil? %>);
-	    //});
-	</script>
-	<%= render 'layouts/shared/left_bar' %>
 	<%= render 'shared/notice' %>
+	<div class="background-logo"></div>
+	<%= render 'layouts/shared/navbar' %>
 	
-	<div id="dynamic-bar" class="shadow-light">
-		<div class="container">
-			<%= yield :dynamic_bar %>
-		</div>
-		<div class="handle"></div>
-	</div>
-		
+	
 	<%= yield %>
 </body>
 
