--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -6,6 +6,11 @@ body, html {
 	font-family: "gothamrndbook-Book";
 }
 
+ul {
+	margin: 0;
+	padding: 0;
+}
+
 @font-face{
 font-family: "gothamrndbook-Book";
    font-style: normal;
