--- a/app/views/layouts/maps/_submenu.html.erb
+++ b/app/views/layouts/maps/_submenu.html.erb
@@ -1,7 +1,10 @@
-<ul class="nav nav-pills">
-	<li class="active"><%= link_to 'Mapa', '#', :class => 'bar-activator map' %></li>
-	<li><%= link_to 'Capas', '#', :class => 'bar-activator layers' %></li>
-</ul>
+<div class="row-fluid">
+	<ul class="nav nav-pills span7">
+		<li class="active"><%= link_to 'Mapa', '#', :class => 'bar-activator map' %></li>
+		<li><%= link_to 'Capas', '#', :class => 'bar-activator layers' %></li>
+	</ul>
+	<div class="span5"><a class="btn btn-inverse pull-right locate-me"><i class="icon icon-map-marker"></i> Ubicarme</a></div>
+</div>
 <div class="layers section-view">
 	<div class="menu shadow-light">
 		<ul>
