--- a/app/views/maps/layers/incidents/index.html.erb
+++ b/app/views/maps/layers/incidents/index.html.erb
@@ -22,6 +22,12 @@
 					<p class="title">Asalto</p>
 				</a>
 			</li>
+			<li>
+				<a class="box" href="">
+					<p class="number">2</p>
+					<p class="title">Averias</p>
+				</a>
+			</li>
 		</ul>
 	</div>
 <% end %>
