--- a/app/views/maps/layers/incidents/new.html.erb
+++ b/app/views/maps/layers/incidents/new.html.erb
@@ -6,17 +6,48 @@
 	    </ul>
 		</div>
 		<div class="span6 pull-right">
-			<h3 class="pull-right">Nuevo Incidente</h3>
+			<h3 class="pull-right"><%= t('incidents.views.new.title') %></h3>
 		</div>
 	</div>
-	<p class="instruction">1. Selecciona un punto en el mapa</p>
-	<div id="map" class="show-only edit map-dimensions rounded-5 shadow-light"></div>
+	<div class="row-fluid instruction">
+		<div class="span6">
+			<p>1. Selecciona un punto en el mapa</p>
+		</div>
+		<div class="span6">
+			<a class="btn btn-inverse pull-right locate-me"><i class="icon icon-map-marker"></i> Ubicarme</a>
+		</div>
+	</div>
+	<div id="map" class="show-only editable map-dimensions rounded-5 shadow-light"></div>
 	
-	<p class="instruction">2. Selecciona un tipo de incidente y completa sus campos</p>
+	<div class="row-fluid instruction">
+		<div class="span6">
+			<p>2. Selecciona un tipo de incidente y completa sus campos</p>
+		</div>
+		<div class="span6">
+			<div class="btn-group pull-right">
+	    	<button class="btn btn-primary incident-selector current-incident" data-text="Selecciona un incidente">Selecciona un incidente</button>
+	    	<button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+	    		<span class="caret"></span>
+	    	</button>
+	    	<ul class="dropdown-menu incident-types">
+		  		<li><%= link_to t('actions.none'), '#/none', "data-text" => "Selecciona un incidente", :class => "incident-selector" %></li>
+	    		<li><%= dropdown_link_for(:accident) %></li>
+					<li><%= dropdown_link_for(:theft) %></li>
+					<li><%= dropdown_link_for(:assault) %></li>
+					<li><%= dropdown_link_for(:breakdown) %></li>
+	    	</ul>
+	    </div>
+		</div>
+	</div>
 	
-	<div class="well">
-		<%= form_for [:maps, :layers, @incident], :html => { :class => "form-horizontal" } do |f| %>
-			<%= render :partial => 'fields', :locals => {:f => f} %>
-  	<% end %>
+	<div id="active-form" class="form-horizontal">
+		<%= render :partial => 'maps/layers/incidents/form', :locals => {:incident => @incident, :kind => Bike.category_symbol_for(:incidents, @incident.kind) } %>
+	</div>
+	
+	<div class="hidden">
+		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :theft } %>
+		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :assault } %>
+		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :accident } %>
+		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :breakdown } %>
 	</div>
 </div>
