Improved left bar submenu

--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -42,6 +42,10 @@ font-family: "gothamrndbold-Bold";
 	margin-top: 70px;
 }
 
+.top-spaced-90 {
+	margin-top: 90px;
+}
+
 .hidden {
 	display: none;
 }
