--- a/app/views/layouts/maps/_submenu.html.erb
+++ b/app/views/layouts/maps/_submenu.html.erb
@@ -1,4 +1,4 @@
-<div class="row-fluid">
+<div class="row-fluid section-switcher">
 	<ul class="nav nav-pills span7">
 		<li class="active"><%= link_to 'Mapa', '#', :class => 'bar-activator map' %></li>
 		<li><%= link_to 'Capas', '#', :class => 'bar-activator layers' %></li>
