--- a/app/views/maps/layers/incidents/new.html.erb
+++ b/app/views/maps/layers/incidents/new.html.erb
@@ -21,11 +21,11 @@
 	
 	<div class="row-fluid instruction">
 		<div class="span6">
-			<p>2. Selecciona un tipo de incidente y completa sus campos</p>
+			<p>2. Selecciona un tipo de incidente</p>
 		</div>
 		<div class="span6">
 			<div class="btn-group pull-right">
-	    	<button class="btn btn-primary incident-selector current-incident" data-text="Selecciona un incidente">Selecciona un incidente</button>
+	    	<button class="btn btn-primary incident-selector current-incident" data-text="Tipo de incidente">Tipo de incidente</button>
 	    	<button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 	    		<span class="caret"></span>
 	    	</button>
