--- a/app/assets/stylesheets/maps.css.scss
+++ b/app/assets/stylesheets/maps.css.scss
@@ -71,15 +71,40 @@ body, html {
 }
 
 .section-actions {
+	margin-bottom: 15px !important;
+	
 	.main-title {
+		text-decoration: none;
+		cursor: pointer;
 		font-size: 20px;
+		color: #FF6109;
+		margin: 0;
+		
+		.icon-chevron-up {
+			display: none;
+		}
 	}
 	
-	ul {
+	ul.suggested {
+		li {
+			display: block !important;
+			padding: 3px 10px;
+			text-align: right;
+			a {
+				font-size: 13px;
+				text-decoration: none;
+				color: black;
+			}
+		}
+	}
+	
+	ul.stats {
+		margin-top: 10px;
+		text-align: center;
 		li {
 			.box {
 				padding: 5px;
-				margin-right: 5px;
+				margin-right: 0px;
 				text-decoration: none;
 				
 				.title, .number { 
@@ -89,12 +114,12 @@ body, html {
 				}
 				
 				.title {
-					font-size: 11px;
+					font-size: 10px;
 					text-transform: uppercase;
 				}
 				
 				.number {
-					font-size: 19px;
+					font-size: 17px;
 				}
 			}
 		}
