--- a/app/views/layouts/maps.html.erb
+++ b/app/views/layouts/maps.html.erb
@@ -5,7 +5,7 @@
 	
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 
-  <%= stylesheet_link_tag    "maps" %>
+  <%= stylesheet_link_tag    "incidents" %>
   <%= javascript_include_tag "maps" %>
 	<%= yield :javascripts %>
   <%= csrf_meta_tags %>
