--- a/app/views/maps/layers/incidents/new.html.erb
+++ b/app/views/maps/layers/incidents/new.html.erb
@@ -1,8 +1,8 @@
-<div class="altering-action">
+<div class="altering-view">
 	<div class="row-fluid">
 		<div class="span2">
 			<ul class="nav nav-pills">
-				<li class="active"><%= link_to t('actions.back_arrow').html_safe, maps_layers_incidents_path %></li>
+				<li class="active"><%= link_to t('actions.back_arrow').html_safe, :back %></li>
 	    </ul>
 		</div>
 		<div class="span6 pull-right">
