--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -7,8 +7,9 @@
         <span class="icon-bar"></span>
       </a>
       <a class="brand" href="#"><%= t('app.name') %></a>
-      <div class="container-fluid nav-collapse pull-right span6">
+      <div class="container-fluid nav-collapse pull-right span7">
         <ul class="nav">
+					<li class="<%= is_section_active?('trips') %>"><%= link_to 'Tu ciudad en bici', trips_path  %></li>
 					<li class="<%= is_section_active?('maps') %>"><%= link_to 'Mapa', maps_path %></li>
 					<li class=""><%= link_to 'Ahora', maps_path %></li>
 					<li><%= link_to 'Mercado', maps_path %></li>
