--- a/app/views/maps/layers/incidents/index.html.erb
+++ b/app/views/maps/layers/incidents/index.html.erb
@@ -32,7 +32,7 @@
 
 <div class="actions">
 	<div class="row-fluid idea">
-		<h2>¿Te robaron la bici? ¿Te aventaron lámina? ó ¿Se ponchó tu bici?</h2>
+		<h2>¿Robaron tu bici? ¿Te aventaron lámina? ó ¿Se ponchó tu bici?</h2>
 		<h4>Reporta tu incidente, contribuye a la comunidad y recibe ayuda</h4>
 	</div>
 	<div class="row-fluid">
@@ -53,6 +53,6 @@
 </div>
 
 <div class="listing-view">
-	<%= render :partial => 'maps/layers/incidents/incident', :collection => @incidents %>
+	<%= render :partial => 'maps/layers/incidents/incident', :collection => @incidents %>	
 </div>
 
