--- a/app/views/maps/layers/incidents/new.html.erb
+++ b/app/views/maps/layers/incidents/new.html.erb
@@ -1,53 +1,1 @@
-<div class="altering-view">
-	<div class="row-fluid">
-		<div class="span2">
-			<ul class="nav nav-pills">
-				<li class="active"><%= link_to t('actions.back_arrow').html_safe, :back %></li>
-	    </ul>
-		</div>
-		<div class="span6 pull-right">
-			<h3 class="pull-right"><%= t('incidents.views.new.title') %></h3>
-		</div>
-	</div>
-	<div class="row-fluid instruction">
-		<div class="span6">
-			<p>1. Selecciona un punto en el mapa</p>
-		</div>
-		<div class="span6">
-			<a class="btn btn-inverse pull-right locate-me"><i class="icon icon-map-marker"></i> Ubicarme</a>
-		</div>
-	</div>
-	<div id="map" class="show-only editable map-dimensions rounded-5 shadow-light"></div>
-	
-	<div class="row-fluid instruction">
-		<div class="span6">
-			<p>2. Selecciona un tipo de incidente</p>
-		</div>
-		<div class="span6">
-			<div class="btn-group pull-right">
-	    	<button class="btn btn-primary incident-selector current-incident" data-text="Tipo de incidente">Tipo de incidente</button>
-	    	<button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-	    		<span class="caret"></span>
-	    	</button>
-	    	<ul class="dropdown-menu incident-types">
-		  		<li><%= link_to t('actions.none'), '#/none', "data-text" => "Selecciona un incidente", :class => "incident-selector" %></li>
-	    		<li><%= dropdown_link_for(:accident) %></li>
-					<li><%= dropdown_link_for(:theft) %></li>
-					<li><%= dropdown_link_for(:assault) %></li>
-					<li><%= dropdown_link_for(:breakdown) %></li>
-	    	</ul>
-	    </div>
-		</div>
-	</div>
-	
-	<div id="active-form" class="form-horizontal">
-		<%= render :partial => 'maps/layers/incidents/form', :locals => {:incident => @incident, :kind => Bike.category_symbol_for(:incidents, @incident.kind) } %>
-	</div>
-	
-	<div class="hidden">
-		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :theft } %>
-		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :assault } %>
-		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :accident } %>
-		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :breakdown } %>
-	</div>
-</div>
+<%= render :partial => 'maps/layers/incidents/full_form', :locals => { :mode => 'new' } %>
