--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,77 +1,9 @@
 /*
  *= require_self
- *= require shared/bars.css
- *= require shared/main.css
- *= require shared/notifications.css
+ *= require superslides
+ *= require bootstrap_and_overrides
  */
 
-
-.board {
-	padding: 10px;
-	width: 700px;
-	background-color: rgba(1,1,1,0.6);
-	border: 1px solid white;
-	color: white;
-	text-align: center;
-	text-shadow: 1px 1px 0px #0E0F0D;
-	margin-top: 70px;
-		
-	a { color: white !important }
-	
-	ul {
-		margin-left: 30px;
-		text-align: left;
-		
-		li { 
-			display: block;
-			margin-bottom: 10px;
-		}
-		
-	}
-	
-	.separator {
-		background-color: #7D7D7D;
-	}
-	
-	h2 {
-		font-size: 23px;
-	}
-}
-
-.opt {
-	border: 1px solid #696969;
-	background-color: rgba(34, 156, 37, 0.5);
-	width: 450px;
-}
-
-.opt:hover {
-	background-color: rgba(34, 156, 37, 0.7);
-}
-
-.green {
-	color: #6FC95D
-}
-
-.techie {
-	color: #DD972D
-}
-
-.blue_ {
-	color: #4770A6;
-}
-
-p.future {
-	margin-top: 80px;
-	font-size: 28px;
-}
-
-p.contact, p.future {
-	color: black;
-	text-align: center;
-	font-weight: 800;
-	padding: 0px;
-}
-
-p.contact {
-	font-size: 20px !important;
+body, html {
+	overflow: hidden;
 }
