--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -19,7 +19,7 @@
 <h3 class="centered-text">Recorridos populares</h3>
 <div class="separator"></div>
 
-<div class="row-fluid trips">
+<div class="row-fluid trips centered-text">
 	<div class="content span12">
 		<div class="box">
 			<div class="core">
@@ -132,7 +132,7 @@
     </ul>
 	</div>
 </div>
-<div class="row-fluid rides">
+<div class="row-fluid rides centered-text">
 	<div class="content centered span12">
 		<div class="box">
 			<div class="core">
