--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,44 @@
-<div class="board centered shadow-lighter rounded-5">
-	<h1>Este es el primer beta de <span class="name">Wikicleta</span></h1>
+<div id="slides">
+  <ul class="slides-container">
+		<li>
+      <%= image_tag '/assets/slider/bici0.jpg'%>
+      <div class="container">
+        Slide one
+      </div>
+    </li>
+		<li>
+      <%= image_tag '/assets/slider/bici1.jpg'%>
+      <div class="container">
+        Slide one
+      </div>
+    </li>
+		<li>
+      <%= image_tag '/assets/slider/bici2.jpg'%>
+      <div class="container">
+        Slide one
+      </div>
+    </li>
+    <li>
+      <%= image_tag '/assets/slider/bici3.jpg'%>
+      <div class="container">
+        Slide one
+      </div>
+    </li>
+    <li>
+      <%= image_tag '/assets/slider/bici4.jpg'%>
+      <div class="container">
+        Slide two
+      </div>
+    </li>
+    <li>
+      <%= image_tag '/assets/slider/bici5.jpg'%>
+      <div class="container">
+        Slide three
+      </div>
+    </li>
+  </ul>
+  <nav class="slides-navigation">
+    <a href="#" class="next"><i class="icon-chevron-right"></i></a>
+    <a href="#" class="prev"><i class="icon-chevron-left"></i></a>
+  </nav>
 </div>
-<br/>
-<div class="board opt centered shadow-lighter rounded-5">
-	<h2><%= link_to "Presenta tu bici en comunidad y conoce otras bicis", bikes_path %></h2>
-</div>
-
-<div class="board opt centered shadow-lighter rounded-5">
-	<h2><%= link_to "Reporta algún incidente que te haya ocurrido en bici", map_incidents_path %></h2>
-</div>
-
-<p class="future">¡Mucho más por venir!</p>
