--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,4 +6,16 @@
 
 body, html {
 	overflow: hidden;
+	
+	.slides-container {
+		.container {
+
+			
+			.logo {
+				width: 350px;
+				height: 350px;
+				background: url('/assets/wikicleta_big.png');
+			}
+		}
+	}
 }
