--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 		<li>
       <%= image_tag '/assets/slider/bici0.jpg'%>
       <div class="container">
-        Slide one
+        <div class="logo"></div>
       </div>
     </li>
 		<li>
