--- a/app/views/layouts/maps/_submenu.html.erb
+++ b/app/views/layouts/maps/_submenu.html.erb
@@ -11,10 +11,9 @@
 			<li><span class="routes"></span><%= link_to 'Rutas y Bicibuses', '#' %></li>
 			<!-- Ciclovias | Bicibuses -->
 			<li><span class="bike-reports"></span><%= link_to 'Incidentes', maps_layers_incidents_path %></li>
-			<li><span class="cyclepaths"></span><%= link_to 'Ciclovias', '#' %></li>
-			<li><span class="highlights"></span><%= link_to 'Anotaciones', '#' %></li>
+			<li><span class="cyclepaths"></span><%= link_to 'Ciclovias y Bicis Públicas', '#' %></li>
+			<li><span class="highlights"></span><%= link_to 'Las calles', '#' %></li>
 			<!-- Puntos de riesgo: Baches, Coladeras, Pavimento, Calles | Que ver -->
-			<li><span class="bike-sharing"></span><%= link_to 'Bicis Públicas', '#' %></li>
 			<li><span class="places"></span><%= link_to 'Lugares', '#' %></li>
 			<!-- Talleres | Bike Friendly: Cafes, Restaurantes, Cines, Museos | Bici Estacionamientos : Oficiales, Otros -->
 		</ul>
