--- a/app/views/layouts/plain.html.erb
+++ b/app/views/layouts/plain.html.erb
@@ -3,13 +3,14 @@
 <head>
   <title><%= t('app.name') %></title>
 	  
-	<%= stylesheet_link_tag    "welcome" %>
-  <%= javascript_include_tag "application" %>
+	<%= stylesheet_link_tag    "plain" %>
+  <%= javascript_include_tag "plain" %>
 	<%= yield(:javascripts) %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 	
+<div class="background-logo"></div>	
 <%= yield %>
 
 </body>
