--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,44 +1,7 @@
-<div id="slides">
-  <ul class="slides-container">
-		<li>
-      <%= image_tag '/assets/slider/bici0.jpg'%>
-      <div class="container">
-        <div class="logo"></div>
-      </div>
-    </li>
-		<li>
-      <%= image_tag '/assets/slider/bici1.jpg'%>
-      <div class="container">
-        Slide one
-      </div>
-    </li>
-		<li>
-      <%= image_tag '/assets/slider/bici2.jpg'%>
-      <div class="container">
-        Slide one
-      </div>
-    </li>
-    <li>
-      <%= image_tag '/assets/slider/bici3.jpg'%>
-      <div class="container">
-        Slide one
-      </div>
-    </li>
-    <li>
-      <%= image_tag '/assets/slider/bici4.jpg'%>
-      <div class="container">
-        Slide two
-      </div>
-    </li>
-    <li>
-      <%= image_tag '/assets/slider/bici5.jpg'%>
-      <div class="container">
-        Slide three
-      </div>
-    </li>
-  </ul>
-  <nav class="slides-navigation">
-    <a href="#" class="next"><i class="icon-chevron-right"></i></a>
-    <a href="#" class="prev"><i class="icon-chevron-left"></i></a>
-  </nav>
+<div class="background-logo"></div>
+
+<div class="row-fluid main-area">
+	<div class="span12">
+		<div class="logo centered"></div>
+	</div>
 </div>
