--- a/app/views/maps/layers/incidents/index.html.erb
+++ b/app/views/maps/layers/incidents/index.html.erb
@@ -32,8 +32,8 @@
 
 <div class="actions">
 	<div class="row-fluid idea">
-		<h2>¿Robaron tu bici? ¿Te aventaron lámina? ó ¿Se ponchó tu bici?</h2>
-		<h4>Reporta tu incidente, contribuye a la comunidad y recibe ayuda</h4>
+		<h2>¿Qué ocurrió?</h2>
+		<h4>Reporta un incidente y recibe ayuda de la comunidad</h4>
 	</div>
 	<div class="row-fluid">
 		<div class="span9">
@@ -45,8 +45,17 @@
 		</div>
 		<div class="span3">
 			<div class="pull-right">
-				<%= link_to "Buscar", '#/search', :class => "btn" %>
-				<%= link_to "Nuevo", new_maps_layers_incident_path, :class => "btn btn-primary" %>
+				<div class="dropdown">
+					<%= link_to "Buscar", '#/search', :class => "btn" %>
+					
+		    	<a class="dropdown-toggle btn btn-primary" data-toggle="dropdown" href="#">Reportar</a>
+			    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+						<li><%= link_to 'Accidente', new_maps_layers_incident_path.concat('#/accident') %></li>
+						<li><%= link_to 'Robo de bici', new_maps_layers_incident_path.concat('#/theft') %></li>
+						<li><%= link_to 'Asalto', new_maps_layers_incident_path.concat('#/assault') %></li>
+						<li><%= link_to 'Averia', new_maps_layers_incident_path.concat('#/breakdown') %></li>
+			    </ul>
+		    </div>
 			</div>
 		</div>
 	</div>
