--- a/app/views/maps/root/index.html.erb
+++ b/app/views/maps/root/index.html.erb
@@ -1,3 +1,7 @@
+<div class="well well-small">Bicis robadas</div>
 
+<div class="well well-small">Últimos incidentes</div>
 
+<div class="well well-small">Próximos bicibuses</div>
 
+<div class="well well-small">Rutas populares</div>
