--- a/app/views/maps/layers/incidents/_incident.html.erb
+++ b/app/views/maps/layers/incidents/_incident.html.erb
@@ -24,19 +24,31 @@
 		<div class="row-fluid">
 			<p class="centered-text description"><%= incident.description %></p>
 		</div>
+		<div class="row-fluid extras centered-text">
+			<div class="span6">
+				<% if incident.is_of_kind?(:theft) %>				
+					<span class="emphasize"><%= t('incidents.views.show.attacher_used') %></span> 
+					<%= Bike.humanized_category_for(:locks, incident.lock_used) %>
+				<% elsif incident.is_of_kind?(:accident) || incident.is_of_kind?(:regulation_infraction) %>
+					<span class="emphasize"><%= t('incidents.views.show.vehicle_identifier') %></span>
+					<%= incident.vehicle_identifier || t('missing.fem') %>
+				<% end %>
+			</div>
+			<div class="span6 complaint-issued">
+				<span class="emphasize"><%= t('incidents.views.index.list.item.complaint_issued')[incident.complaint_issued] %></span>
+			</div>
+		</div>
 		
 		<div class="separator"></div>
 		<!-- Render actions that appear below the separator -->
 		<div class="row-fluid">
 			<ul class="pull-left contextual-actions">
-				<li class="remarked"><i class="icon icon-eye-open"></i> <%= link_to 'Detalles', '#' %></li>
 				<% if current_user && current_user.owns?(incident) %>
 					<li><i class="icon icon-remove"></i> <%= link_to 'Eliminar', '#', "data-toggle"=>"modal", "data-target"=>"#dialog" %></li>
 					<li><i class="icon icon-edit"></i> <%= link_to 'Modificar', edit_maps_layers_incident_path(incident) %></li>
 				<% end %>
 			</ul>
 			<ul class="pull-right contextual-info">
-				<li class="comments"><%= number_of_comments_for(incident) %></li>
 				<li>
 					<div>
 						<span class="time"><%= distance_of_time_in_words(incident.date || Date.today, Time.now, true) %></span> 
@@ -46,7 +58,4 @@
 			</ul>
 		</div>		
 	</div>
-	<!-- Render incident delete dialog -->
-	<%= render :partial => 'shared/modal_dialog', :locals => { 
-		:record => "incidente", :accept => link_to(t('actions.delete'), maps_layers_incident_path(incident), :method => :delete, :class => "btn btn-danger", :remote => true)} %>
 </div>
