--- a/app/views/maps/layers/incidents/_incident.html.erb
+++ b/app/views/maps/layers/incidents/_incident.html.erb
@@ -31,7 +31,9 @@
 					<%= Bike.humanized_category_for(:locks, incident.lock_used) %>
 				<% elsif incident.is_of_kind?(:accident) || incident.is_of_kind?(:regulation_infraction) %>
 					<span class="emphasize"><%= t('incidents.views.show.vehicle_identifier') %></span>
-					<%= incident.vehicle_identifier || t('missing.fem') %>
+					<%= incident.vehicle_identifier.blank? ? t('missing.fem') : incident.vehicle_identifier %>
+				<% elsif incident.is_of_kind?(:breakdown) %>
+					<span class="emphasize"><%= t('incidents.views.show.fixed')[incident.fixed] %></span>
 				<% end %>
 			</div>
 			<div class="span6 complaint-issued">
@@ -44,7 +46,7 @@
 		<div class="row-fluid">
 			<ul class="pull-left contextual-actions">
 				<% if current_user && current_user.owns?(incident) %>
-					<li><i class="icon icon-remove"></i> <%= link_to 'Eliminar', '#', "data-toggle"=>"modal", "data-target"=>"#dialog" %></li>
+					<li><i class="icon icon-remove"></i> <%= link_to 'Eliminar', 'javascript:void(0);', "data-id" => incident.id, :class => "delete-incident" %></li>
 					<li><i class="icon icon-edit"></i> <%= link_to 'Modificar', edit_maps_layers_incident_path(incident) %></li>
 				<% end %>
 			</ul>
