--- a/app/views/maps/layers/incidents/index.html.erb
+++ b/app/views/maps/layers/incidents/index.html.erb
@@ -65,6 +65,7 @@
 
 <div class="listing-view">
 	<div class="empty hidden"><i class="icon-ok-sign"></i> <%= t('incidents.views.index.empty') %></div>
-	<%= render :partial => 'maps/layers/incidents/incident', :collection => @incidents %>	
+	<%= render :partial => 'maps/layers/incidents/incident', :collection => @incidents %>
+	<%= render :partial => 'shared/modal_dialog', :locals => {:record => "incidente"} %>
 </div>
 
